changes by recovery from previous version